app-2048/app-2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2048
  namespace: app-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2048
  template:
    metadata:
      labels:
        app: app-2048
    spec:
      containers:
        - name: app-2048
          image: public.ecr.aws/i7m0t5d2/2048game:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
