app-2048/app-2048-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2048
  namespace: app-2048
  annotations:
    external-dns.alpha.kubernetes.io/hostname: app-2048.phexhub-np.int.bayer.com
    cert-manager.io/cluster-issuer: letsencrypt-production  # cluster issuer for certificate generation
spec:
  selector:
    app: app-2048
  ports:
    - port: 80
