app-2048/app-2048-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2048
  namespace: app-2048
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  
    nginx.ingress.kubernetes.io/ssl-certificate: "app-2048/app-2048-tls"
    external-dns.alpha.kubernetes.io/hostname: app-2048.phexhub-dev.int.bayer.com
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: app-2048.phexhub-dev.int.bayer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2048
            port:
              number: 80
  tls:
    - hosts:
      - app-2048.phexhub-dev.int.bayer.com
      secretName: app-2048-phexhub-dev-tls
